fixed block code font

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,25 +59,25 @@
 		}
 
 		@font-face {
-			font-family: 'JetBrains Mono';
+			font-family: 'JetBrains Mono Nerd Font';
 			src: url('{{ "/assets/fonts/jetbrains-mono/JetBrainsMonoNerdFontMono-Regular.ttf" | relative_url }}') format('truetype');
 			font-weight: normal;
 			font-style: normal;
 		}
 		@font-face {
-			font-family: 'JetBrains Mono';
+			font-family: 'JetBrains Mono Nerd Font';
 			src: url('{{ "/assets/fonts/jetbrains-mono/JetBrainsMonoNerdFontMono-Bold.ttf" | relative_url }}') format('truetype');
 			font-weight: bold;
 			font-style: normal;
 		}
 		@font-face {
-			font-family: 'JetBrains Mono';
+			font-family: 'JetBrains Mono Nerd Font';
 			src: url('{{ "/assets/fonts/jetbrains-mono/JetBrainsMonoNerdFontMono-Italic.ttf" | relative_url }}') format('truetype');
 			font-weight: normal;
 			font-style: italic;
 		}
 		@font-face {
-			font-family: 'JetBrains Mono';
+			font-family: 'JetBrains Mono Nerd Font';
 			src: url('{{ "/assets/fonts/jetbrains-mono/JetBrainsMonoNerdFontMono-BoldItalic.ttf" | relative_url }}') format('truetype');
 			font-weight: bold;
 			font-style: italic;
